[tool.poetry]
name = "bundle-library"
version = "0.1.0"
description = ""
authors = ["João Vitor Bonadiman <joao@bonadiman.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.1.1"
postgrest = "^0.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
